--- a/src/index.html
+++ b/src/index.html
@@ -87,6 +87,20 @@
           passengers, luggage and fuel—to orbit.</p>
       </div>
     </section>
+    <footer class="footer">
+      <img src="img/logo.svg" alt="logo spaceX" class="logo">
+      <nav class="footer-nav">
+        <ul class="list">
+          <li class="item"><a href="#" class="item-link"></a></li>
+          <li class="item"><a href="#" class="item-link"></a></li>
+          <li class="item"><a href="#" class="item-link"></a></li>
+          <li class="item"><a href="#" class="item-link"></a></li>
+          <li class="item"><a href="#" class="item-link"></a></li>
+          <li class="item"><a href="#" class="item-link"></a></li>
+          <li class="item"><a href="#" class="item-link"></a></li>
+        </ul>
+      </nav>
+    </footer>
     <script src="js/rellax.min.js"></script>
     <script src="js/vidbg.js"></script>
     <script src="js/main.js"></script>
