--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
             <td class="table-column">16,800 kg / 37,040 lb</td>
           </tr>
         </table>
-        <img src="img/rocket.png" alt="rocket image" class="rocket" data-rellax-speed="9">
+        <img src="img/rocket.png" alt="rocket image" class="rocket" data-rellax-speed="6">
         <h2 class="features-title">UNMATCHED<br> PERFORMANCE</h2>
         <p class="features-text">With more than 5 million pounds 
           of thrust at liftoff, Falcon Heavy is the most capable 
@@ -91,15 +91,17 @@
       <img src="img/logo.svg" alt="logo spaceX" class="logo">
       <nav class="footer-nav">
         <ul class="list">
-          <li class="item"><a href="#" class="item-link"></a></li>
-          <li class="item"><a href="#" class="item-link"></a></li>
-          <li class="item"><a href="#" class="item-link"></a></li>
-          <li class="item"><a href="#" class="item-link"></a></li>
-          <li class="item"><a href="#" class="item-link"></a></li>
-          <li class="item"><a href="#" class="item-link"></a></li>
-          <li class="item"><a href="#" class="item-link"></a></li>
+          <li class="item"><a href="#" class="item-link">Twitter</a></li>
+          <li class="item"><a href="#" class="item-link">Youtube</a></li>
+          <li class="item"><a href="#" class="item-link">Instagram</a></li>
+          <li class="item"><a href="#" class="item-link">Flickr</a></li>
+          <li class="item"><a href="#" class="item-link">LinkedIn</a></li>
+          <li class="item"><a href="#" class="item-link">Privacy</a></li>
+          <li class="item"><a href="#" class="item-link">Policy</a></li>
         </ul>
       </nav>
+      <p class="footer-text">For additional questions, contact <a class="footer-link" href="mailto:rideshare@spacex.com">rideshare@spacex.com</a></p>
+      <a href="" class="button">Contact us</a>
     </footer>
     <script src="js/rellax.min.js"></script>
     <script src="js/vidbg.js"></script>
